Ventana modal sin diseño

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <main class="root">
         <!-- Sección principal -->
+        <div class="botones"></div>
+        <div class="lista_tareas"></div>
+        <div class="formulario"></div>
     </main>
 
-    
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
